sincos/a/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Program Naredba
    2        | Naredba

    3 Naredba: value_token '"' E '"'

    4 E: E '+' E
    5  | E '-' E
    6  | E '*' E
    7  | E '/' E
    8  | sin_token '(' E ')'
    9  | cos_token '(' E ')'
   10  | num_token


Terminals, with rules where they appear

$end (0) 0
'"' (34) 3
'(' (40) 8 9
')' (41) 8 9
'*' (42) 6
'+' (43) 4
'-' (45) 5
'/' (47) 7
error (256)
value_token (258) 3
num_token (259) 10
sin_token (260) 8
cos_token (261) 9


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
Program (15)
    on left: 1 2, on right: 0 1
Naredba (16)
    on left: 3, on right: 1 2
E (17)
    on left: 4 5 6 7 8 9 10, on right: 3 4 5 6 7 8 9


State 0

    0 $accept: . Program $end

    value_token  shift, and go to state 1

    Program  go to state 2
    Naredba  go to state 3


State 1

    3 Naredba: value_token . '"' E '"'

    '"'  shift, and go to state 4


State 2

    0 $accept: Program . $end
    1 Program: Program . Naredba

    $end         shift, and go to state 5
    value_token  shift, and go to state 1

    Naredba  go to state 6


State 3

    2 Program: Naredba .

    $default  reduce using rule 2 (Program)


State 4

    3 Naredba: value_token '"' . E '"'

    num_token  shift, and go to state 7
    sin_token  shift, and go to state 8
    cos_token  shift, and go to state 9

    E  go to state 10


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: Program Naredba .

    $default  reduce using rule 1 (Program)


State 7

   10 E: num_token .

    $default  reduce using rule 10 (E)


State 8

    8 E: sin_token . '(' E ')'

    '('  shift, and go to state 11


State 9

    9 E: cos_token . '(' E ')'

    '('  shift, and go to state 12


State 10

    3 Naredba: value_token '"' E . '"'
    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    '"'  shift, and go to state 17


State 11

    8 E: sin_token '(' . E ')'

    num_token  shift, and go to state 7
    sin_token  shift, and go to state 8
    cos_token  shift, and go to state 9

    E  go to state 18


State 12

    9 E: cos_token '(' . E ')'

    num_token  shift, and go to state 7
    sin_token  shift, and go to state 8
    cos_token  shift, and go to state 9

    E  go to state 19


State 13

    4 E: E '+' . E

    num_token  shift, and go to state 7
    sin_token  shift, and go to state 8
    cos_token  shift, and go to state 9

    E  go to state 20


State 14

    5 E: E '-' . E

    num_token  shift, and go to state 7
    sin_token  shift, and go to state 8
    cos_token  shift, and go to state 9

    E  go to state 21


State 15

    6 E: E '*' . E

    num_token  shift, and go to state 7
    sin_token  shift, and go to state 8
    cos_token  shift, and go to state 9

    E  go to state 22


State 16

    7 E: E '/' . E

    num_token  shift, and go to state 7
    sin_token  shift, and go to state 8
    cos_token  shift, and go to state 9

    E  go to state 23


State 17

    3 Naredba: value_token '"' E '"' .

    $default  reduce using rule 3 (Naredba)


State 18

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
    8  | sin_token '(' E . ')'

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ')'  shift, and go to state 24


State 19

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
    9  | cos_token '(' E . ')'

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ')'  shift, and go to state 25


State 20

    4 E: E . '+' E
    4  | E '+' E .
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 4 (E)


State 21

    4 E: E . '+' E
    5  | E . '-' E
    5  | E '-' E .
    6  | E . '*' E
    7  | E . '/' E

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 5 (E)


State 22

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    6  | E '*' E .
    7  | E . '/' E

    $default  reduce using rule 6 (E)


State 23

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
    7  | E '/' E .

    $default  reduce using rule 7 (E)


State 24

    8 E: sin_token '(' E ')' .

    $default  reduce using rule 8 (E)


State 25

    9 E: cos_token '(' E ')' .

    $default  reduce using rule 9 (E)
